--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,11 @@ requires-python = ">=3.12"
 dependencies = [
     "aiosqlite>=0.20.0",
     "bcrypt>=4.2.1",
+    "boto3>=1.37.9",
     "cryptography>=44.0.0",
     "fastapi>=0.115.6",
     "passlib>=1.7.4",
+    "pydantic-settings>=2.8.1",
     "python-jose>=3.3.0",
     "python-multipart>=0.0.20",
     "sqlalchemy>=2.0.37",
